[gd_scene load_steps=17 format=3 uid="uid://cr81v0u4ichr"]

[ext_resource type="Texture2D" uid="uid://dvj4y8d4pwk6g" path="res://player/player.png" id="1_e17rk"]
[ext_resource type="Script" path="res://player/player.gd" id="1_ti4np"]
[ext_resource type="PackedScene" uid="uid://hybo2nuxhtx" path="res://player/player_blaster.tscn" id="2_wq8nx"]
[ext_resource type="PackedScene" uid="uid://dllp2i11lf5ol" path="res://world/camera_2d.tscn" id="4_fd2go"]
[ext_resource type="PackedScene" uid="uid://5uy3efkbsge6" path="res://collisions/hurtbox.tscn" id="4_x8sb1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rqff0"]
size = Vector2(18, 30)

[sub_resource type="Animation" id="Animation_eyq4x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jboyu"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_o0p5c"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}

[sub_resource type="Animation" id="Animation_qydjt"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 4]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"create_dust_effect"
}, {
"args": [],
"method": &"create_dust_effect"
}]
}

[sub_resource type="Animation" id="Animation_pllj6"]
resource_name = "wall_slide"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vjkms"]
_data = {
"RESET": SubResource("Animation_eyq4x"),
"idle": SubResource("Animation_jboyu"),
"jump": SubResource("Animation_o0p5c"),
"run": SubResource("Animation_qydjt"),
"wall_slide": SubResource("Animation_pllj6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tyie6"]
size = Vector2(14, 28)

[sub_resource type="Animation" id="Animation_fl18l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerBlaster:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1ligf"]
resource_name = "blink"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerBlaster:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_esoaq"]
_data = {
"RESET": SubResource("Animation_fl18l"),
"blink": SubResource("Animation_1ligf")
}

[node name="Player" type="CharacterBody2D"]
z_index = 10
collision_layer = 4
collision_mask = 3
floor_constant_speed = true
floor_snap_length = 2.0
safe_margin = 0.1
script = ExtResource("1_ti4np")

[node name="PlayerBlaster" parent="." instance=ExtResource("2_wq8nx")]
show_behind_parent = true
position = Vector2(2, -11)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -24)
texture = ExtResource("1_e17rk")
hframes = 12

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Sprite2D"]
position = Vector2(2, 13)
remote_path = NodePath("../../PlayerBlaster")
update_rotation = false
update_scale = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -15)
shape = SubResource("RectangleShape2D_rqff0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vjkms")
}

[node name="Camera2D" parent="." instance=ExtResource("4_fd2go")]

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="DropTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Hurtbox" parent="." instance=ExtResource("4_x8sb1")]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_tyie6")

[node name="BlinkingAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_esoaq")
}

[node name="Center" type="Marker2D" parent="."]
position = Vector2(0, -8)

[connection signal="timeout" from="DropTimer" to="." method="_on_drop_timer_timeout"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
